--- a/Index.html
+++ b/Index.html
@@ -54,8 +54,8 @@
   </style>
 </head>
 <body>
+  <img src="bull-and-bear.jpeg.JPG" alt="Bull and Bear" class="image">
   <h1>Bullish or Bearish?</h1>
-  <img src="bull-and-bear.jpeg" alt="Bull and Bear" class="image">
   <p>
     Crypto bros what is going on??? Trump launched a shitter, Argentina rugged, 
     Portnoy is a confirmed Jew, Africa learned how to use a computer and Normies 
