--- a/Index.html
+++ b/Index.html
@@ -57,7 +57,7 @@
   <img src="bull-and-bear.jpeg.JPG" alt="Bull and Bear" class="image">
   <h1>Bullish or Bearish?</h1>
   <p>
-    Crypto bros what is going on??? Trump launched a shitter, Argentina rugged, 
+    Crypto bros what is going on???? Trump launched a shitter, Argentina rugged, 
     Portnoy is a confirmed Jew, Africa learned how to use a computer and Normies 
     are buying anti-Semitic memes. Is it so over? Are we bullish or bearish?
   </p>
